--- a/final_writeup/final.tex
+++ b/final_writeup/final.tex
@@ -58,27 +58,27 @@ In this day and age, consumers have unprecedented access to a deluge of informat
 
 However, one of the biggest challenges in training aspect-specific sentiment analysis models is the lack of large datasets labeled with sentiment on the aspect-level (for most datasets, sentiment labels exist on a document level). In this report, we propose a scalable method for extracting and classifying aspect-specific sentiments that is largely unsupervised. To do this, we tackle two separate but interconnected components of this problem: 1) discovery of aspects, and 2) aspect-specific sentiment classification.
 
-Within the context of a product review, the first component, \textit{aspect discovery}, involves identifying individual ``aspects" (which could be the product itself, or features/attributes of the product). This is made more difficult by the fact that relevant aspects might differ greatly across products in the same category. For example, aspects revelant to a cellular phone might be \textit{battery life}, \textit{screen size}, \textit{weight} and \textit{cost}. Not all these aspects are relevant across electronic items: for instance, \textit{screen size} might be irrelevant for a pair of headphones or a video game controller. We tackle this problem by generating new aspects from a list of seed words based on cosine similarities of the \texttt{word2vec} representations [i-ii], and using the discovered aspects to train an aspect classifier.
+Within the context of a product review, the first component, \textit{aspect discovery}, involves identifying individual ``aspects" (which could be the product itself, or features/attributes of the product). This is made more difficult by the fact that relevant aspects might differ greatly across products in the same category. For example, aspects revelant to a cellular phone might be \textit{battery life}, \textit{screen size}, \textit{weight} and \textit{cost}. Not all these aspects are relevant across electronic items: for instance, \textit{screen size} might be irrelevant for a pair of headphones or a video game controller. We tackle this problem by generating new aspects from a list of seed words based on cosine similarities of the \texttt{word2vec} representations [1-2], and using the discovered aspects to train an aspect classifier.
 
-The second component, \textit{aspect-specific sentiment classification} involves identifying the sentiment associated with each aspect [1-6]---\textit{very positive, positive neutral, negative or very negative}. We approach this problem by first using a lexicon-based heuristic as a baseline and as a means of \textit{pre-labeling} the data. We then refined the labels and trained a convolutional neural network [10] to tackle the sentiment analysis problem as a sentence classification problem.
+The second component, \textit{aspect-specific sentiment classification} involves identifying the sentiment associated with each aspect [3-8]---\textit{very positive, positive neutral, negative or very negative}. We approach this problem by first using a lexicon-based heuristic as a baseline and as a means of \textit{pre-labeling} the data. We then refined the labels and trained a convolutional neural network [12] to tackle the sentiment analysis problem as a sentence classification problem.
 
 \section{Related work}
 
 
-\textbf{Aspect Discovery}: Previous methods have used graphical models to attempt to extract latent sentiment. [1-3] use Latent Dirichlet Allocation, while [4] uses a Conditional Random Field model to model latent aspects. In particular, most of these methods have a generative model where there is a latent aspect (drawn from a mix of ``global" and ``local" topics [1-2], or latent to each sentence [3]). 
+\textbf{Aspect Discovery}: Previous methods have used graphical models to attempt to extract latent sentiment. [3-5] use Latent Dirichlet Allocation, while [6] uses a Conditional Random Field model to model latent aspects. In particular, most of these methods have a generative model where there is a latent aspect (drawn from a mix of ``global" and ``local" topics [3-4], or latent to each sentence [5]). 
 
 % Add in "Simpler is better" paper
 
 [aspect parser paper]: rule-based approach to extracting aspects
 
-\textbf{Aspect-specific Sentiment Classification}: There has been recent work on using convolutional neural networks (CNN) trained on top of pre-trained word vectors for sentence-level classification tasks [10]. Specifically, [10] demonstrated the use of CNN to outperform state-of-the-art models on sentiment analysis classification tasks. Other deep learning approaches for aspect-based sentiment analysis use hierarchical models such as a Recursive Neural Tensor Network (RNTN) to extract aspect-sentiment tuples. Unfortunately, such supervised methods (e.g. [5-7]) that require labeled aspects-sentiment pairs for training are unscalable, and a better approach would be to automatically identify relevant aspects for each product (which, e.g. [1-3] try to do via topic modeling). 
+\textbf{Aspect-specific Sentiment Classification}: There has been recent work on using convolutional neural networks (CNN) trained on top of pre-trained word vectors for sentence-level classification tasks [12]. Specifically, [12] demonstrated the use of CNN to outperform state-of-the-art models on sentiment analysis classification tasks. Other deep learning approaches for aspect-based sentiment analysis use hierarchical models such as a Recursive Neural Tensor Network (RNTN) to extract aspect-sentiment tuples. Unfortunately, such supervised methods (e.g. [7-9]) that require labeled aspects-sentiment pairs for training are unscalable, and a better approach would be to automatically identify relevant aspects for each product (which, e.g. [3-5] try to do via topic modeling). 
 
 % TODO: Desmond to add more references?
 
 \section{Dataset}
-The dataset that we used consists of 7.6 million reviews (39.4M sentences) of electronic products from Amazon.com [8]. Each review is labeled with the document-level 5 star rating, which we did not end up using as it was too coarse. We focused our attention on the raw natural language text.
+The dataset that we used consists of 7.6 million reviews (39.4M sentences) of electronic products from Amazon.com [10]. Each review is labeled with the document-level 5 star rating, which we did not end up using as it was too coarse. We focused our attention on the raw natural language text. We additionally supplemented our dataset with reviews for more recent products.
 
-\textbf{Preprocessing.} We tokenized our corpus using NLTK's punkt tokenizer [9] for sentence splitting. We then removed all non-alphanumerical characters and replaced all digits with \texttt{DG}. Finally, we performed collocation detection to detect common bigrams.
+\textbf{Preprocessing.} We tokenized our corpus using NLTK's punkt tokenizer [11] for sentence splitting. We then removed all non-alphanumerical characters and replaced all digits with \texttt{DG}. Finally, we performed collocation detection to detect common bigrams.
 
 \section{Approach}
 
@@ -127,11 +127,11 @@ Using the expanded list of aspects (from the aspect discovery process), we label
 \begin{center}
 \includegraphics[width=\columnwidth]{model_architecture.png}
 \end{center}
-\caption{CNN Model Architecture as documented Kim [10]. The input is an $2m+1$ word context, where $m$ is the number of words on each side of the aspect, and the center word is an identified aspect. The input is convolved with different filter sizes with $w$ features and is then max-pooled.}
+\caption{CNN Model Architecture as documented Kim [12]. The input is an $2m+1$ word context, where $m$ is the number of words on each side of the aspect, and the center word is an identified aspect. The input is convolved with different filter sizes with $w$ features and is then max-pooled.}
 \label{architecture}
 \end{figure}
 
-\textbf{Sentiment Classification}. We decided upon a Convolutional Neural Network (CNN) Model based after Kim [10], who reported excellent results in sentence classification on many tasks including sentiment analysis. We model our architecture as per [10] and as reproduced in Figure \ref{architecture}. This model has one convolutional layer trained on top of pre-trained word vectors obtained from a \texttt{word2vec} model trained on our dataset. However, unlike [10], our CNN uses only a single non-static channel which allows the word vectors to be further finetuned.
+\textbf{Sentiment Classification}. We decided upon a Convolutional Neural Network (CNN) Model based after Kim [12], who reported excellent results in sentence classification on many tasks including sentiment analysis. We model our architecture as per [12] and as reproduced in Figure \ref{architecture}. This model has one convolutional layer trained on top of pre-trained word vectors obtained from a \texttt{word2vec} model trained on our dataset. However, unlike [12], our CNN uses only a single non-static channel which allows the word vectors to be further finetuned.
 
 Our input is represented as:
 \begin{align}
@@ -184,7 +184,7 @@ Sliding Window Classifier & 92.45\%  & 99.15\%\\
 \begin{tabular}{lll}
 \multicolumn{1}{c}{\bf Sentiment Model}  &\multicolumn{1}{c}{\bf 3-class Accuracy} &\multicolumn{1}{c}{\bf 5-class Accuracy} \\ \hline
  Convolutional Neural Network \textsuperscript{1} & 79.63\% & 64.78\% \\
- Pre-trained out-of-domain RNTN [7]\textsuperscript{2}       & 51.1\% & 42.3\% \\
+ Pre-trained out-of-domain RNTN [9]\textsuperscript{2}       & 51.1\% & 42.3\% \\
  Lexicon-based heuristic	& 75.25\% & -- \\
 \end{tabular}
 \end{center}
@@ -197,7 +197,7 @@ Using the aforementioned steps, we obtained the 6,000 labeled examples which con
 
 Our lexicon-based heuristic has a \textbf{75.25\%} classification accuracy with 3 classes, i.e. only 24.75\% of the 6,000 examples has to be re-labeled into 5 classes. This pre-labeling greatly sped up our labeling process to approximately 8 man-hours for all 6,000 examples. This heuristic also provides us with a baseline accuracy for our CNN sentence classification model.
 
-Our labeled dataset of 6,000 examples is comparable to existing available aspect-sentiment datasets (e.g. the Beer Advocate dataset and Camera Review dataset reported in [6] had 8,000 and 4,000 labeled examples respectively).
+Our labeled dataset of 6,000 examples is comparable to existing available aspect-sentiment datasets (e.g. the Beer Advocate dataset and Camera Review dataset reported in [8] had 8,000 and 4,000 labeled examples respectively).
 
 % Socher's model (down the rows) vs. human labels. So there were 16 instances that human says 2 and model says 1.
 %							True Labels
@@ -212,9 +212,9 @@ Our labeled dataset of 6,000 examples is comparable to existing available aspect
 \subsubsection{Convolutional Neural Network Sentiment Classifier}
 We trained our CNN on using the 6,000 labeled examples and evaluated using 10-fold cross validation. The results are given in Table \ref{ModelResultsTable}. The CNN, with 3 filters of size 3, 4 and 5 and hidden layer dimensions of 300 achieved an accuracy of \textbf{64.78\%} on the 5-class (\textit{very positve, positive, neutral, negative, very negative}) classification, and \textbf{79.63\%} on the coarser 3-class (\textit{positve, neutral, negative}) classification task.
 
-We also considered the possibility of using existing pre-trained sentiment classification models to test on the discovered aspect (as opposed to training a sentiment classifier as we did). For instance, there are recursive neural network models (e.g. Socher et al [7]) that are trained on larger and more granular labeled data. However, these models are often trained on other domains ([7] was trained on movie reviews) and it is still an open question as to the degree of cross-domain generalization. To test this, we ran the model (as implemented in Stanford CoreNLP Sentiment Analysis [7]) on our 6,000 labeled examples. The 5-class accuracy was 42.3\%, while the 3 class accuracy was 51.1\%.
+We also considered the possibility of using existing pre-trained sentiment classification models to test on the discovered aspect (as opposed to training a sentiment classifier as we did). For instance, there are recursive neural network models (e.g. Socher et al [9]) that are trained on larger and more granular labeled data. However, these models are often trained on other domains ([9] was trained on movie reviews) and it is still an open question as to the degree of cross-domain generalization. To test this, we ran the model (as implemented in Stanford CoreNLP Sentiment Analysis [9]) on our 6,000 labeled examples. The 5-class accuracy was 42.3\%, while the 3 class accuracy was 51.1\%.
 
-The difference in accuracy was largely a result of testing the model out of domain (while our model was trained within domain). In particular, there are words that most likely do not exist in the vocabulary of [7] (e.g. words like "motherboard" and "pixel\_density"). We note, however, that [7] reported a test accuracy on their own dataset of 45.7\% on a 5-class task---a performance that is comparable to what we found.
+The difference in accuracy was largely a result of testing the model out of domain (while our model was trained within domain). In particular, there are words that most likely do not exist in the vocabulary of [9] (e.g. words like "motherboard" and "pixel\_density"). We note, however, that [9] reported a test accuracy on their own dataset of 45.7\% on a 5-class task---a performance that is comparable to what we found.
 
 \subsection{Qualitative Evaluation of Overall Method}
 
@@ -260,28 +260,30 @@ We would like to acknowledge funding for computing resources provided by the Dee
 \small{
 
 %Word2Vec papers
-[i] Mikolov, T. \& Chen, K. \& Corrado, G. \& Dean, J. (2013). Efficient Estimation of Word Representations in Vector Space. In Proceedings of Workshop at ICLR, 2013.
+[1] Mikolov, T. \& Chen, K. \& Corrado, G. \& Dean, J. (2013). Efficient Estimation of Word Representations in Vector Space. In Proceedings of Workshop at ICLR, 2013.
 
-[ii] Mikolov, T. \& Chen, K. \& Corrado, G. \& Dean, J. (2013). Distributed Representations of Words and Phrases and their Compositionality. In Proceedings of NIPS, 2013.
+[2] Mikolov, T. \& Chen, K. \& Corrado, G. \& Dean, J. (2013). Distributed Representations of Words and Phrases and their Compositionality. In Proceedings of NIPS, 2013.
 
 [iii] Hinton, G., Srivastava, N., Krizhevsky, A., Sutskever, I., Salakhutdinov, R. (2012). Improving neural networks by preventing co-adaptation of feature detectors. CoRR, abs/1207.0580.
 
-[1] Titov, I., \& McDonald, R. T. (2008). A Joint Model of Text and Aspect Ratings for Sentiment Summarization. In {\it ACL} (Vol. 8, pp. 308-316).
+[Bing]
 
-[2] Brody, S., \& Elhadad, N. (2010). An unsupervised aspect-sentiment model for online reviews. In {\it Human Language Technologies: The 2010 Annual Conference of the North American Chapter of the Association for Computational Linguistics} (pp. 804-812). Association for Computational Linguistics.
+[3] Titov, I., \& McDonald, R. T. (2008). A Joint Model of Text and Aspect Ratings for Sentiment Summarization. In {\it ACL} (Vol. 8, pp. 308-316).
 
-[3] Jo, Y., \& Oh, A. H. (2011). Aspect and sentiment unification model for online review analysis. In Proceedings of the fourth ACM international conference on Web search and data mining (pp. 815-824). ACM.
+[4] Brody, S., \& Elhadad, N. (2010). An unsupervised aspect-sentiment model for online reviews. In {\it Human Language Technologies: The 2010 Annual Conference of the North American Chapter of the Association for Computational Linguistics} (pp. 804-812). Association for Computational Linguistics.
 
-
-[4] Engonopoulos, N., Lazaridou, A., Paliouras, G., \& Chandrinos, K. (2011). ELS: a word-level method for entity-level sentiment analysis. In {\it Proceedings of the International Conference on Web Intelligence, Mining and Semantics}
-
-
-[5] Moilanen, K., \& Pulman, S. (2009). Multi-entity Sentiment Scoring. In {\it Recent Advances in NLP} (pp. 258-263).
+[5] Jo, Y., \& Oh, A. H. (2011). Aspect and sentiment unification model for online review analysis. In Proceedings of the fourth ACM international conference on Web search and data mining (pp. 815-824). ACM.
 
 
-[6] Lakkaraju, H., Socher, R, \& Manning, C. (2014). Aspect Specific Sentiment Analysis using Hierarchical Deep Learning. {\it NIPS Workshop on Deep Learning and Representation Learning}
+[6] Engonopoulos, N., Lazaridou, A., Paliouras, G., \& Chandrinos, K. (2011). ELS: a word-level method for entity-level sentiment analysis. In {\it Proceedings of the International Conference on Web Intelligence, Mining and Semantics}
 
-[7] Socher, R., Perelygin, A., Wu, J. Y., Chuang, J., Manning, C. D., Ng, A. Y., \& Potts, C. (2013). Recursive deep models for semantic compositionality over a sentiment treebank. In {\it Proceedings of the conference on Empirical Methods in Natural Language Processing (EMNLP)} (Vol. 1631, p. 1642).
+
+[7] Moilanen, K., \& Pulman, S. (2009). Multi-entity Sentiment Scoring. In {\it Recent Advances in NLP} (pp. 258-263).
+
+
+[8] Lakkaraju, H., Socher, R, \& Manning, C. (2014). Aspect Specific Sentiment Analysis using Hierarchical Deep Learning. {\it NIPS Workshop on Deep Learning and Representation Learning}
+
+[9] Socher, R., Perelygin, A., Wu, J. Y., Chuang, J., Manning, C. D., Ng, A. Y., \& Potts, C. (2013). Recursive deep models for semantic compositionality over a sentiment treebank. In {\it Proceedings of the conference on Empirical Methods in Natural Language Processing (EMNLP)} (Vol. 1631, p. 1642).
 
 
 %[8] Ghose, A., \& Ipeirotis, P. G. (2007). Designing novel review ranking systems: predicting the usefulness and impact of reviews. In {\it Proceedings of the Ninth international conference on Electronic commerce} (pp. 303-310). ACM.
@@ -291,11 +293,11 @@ We would like to acknowledge funding for computing resources provided by the Dee
 %[10] Dai, W., Jin, G. Z., Lee, J., \& Luca, M. (2012). Optimal aggregation of consumer ratings: an application to Yelp.com (No. w18567). National Bureau of Economic Research. 
 
 
-[8] McAuley, J., Targett, C., Shi, J., \& van den Hengel, A. (2015). Image-based recommendations on styles and substitutes. {\it ACM Special Interest Group on Information Retrieval (SIGIR)}
+[10] McAuley, J., Targett, C., Shi, J., \& van den Hengel, A. (2015). Image-based recommendations on styles and substitutes. {\it ACM Special Interest Group on Information Retrieval (SIGIR)}
 
-[9] Bird, Steven, Loper, E. and Klein, E. (2009). Natural Language Processing with Python. O'Reilly Media Inc.
+[11] Bird, Steven, Loper, E. and Klein, E. (2009). Natural Language Processing with Python. O'Reilly Media Inc.
 
-[10] Kim, Y. (2014). Convolutional neural networks for sentence classification. EMNLP.
+[12] Kim, Y. (2014). Convolutional neural networks for sentence classification. EMNLP.
 
 %% this paper isn't that relevant. it's an evaluation system.
 %[2] Ward, C. B., Choi, Y., Skiena, S., \& Xavier, E. C. (2011). Empath: A framework for evaluating entity-level sentiment analysis. In {\it Emerging Technologies for a Smarter World (CEWIT), 2011 8th International Conference \& Expo}. (pp. 1-6). IEEE.
