--- a/final_writeup/final.tex
+++ b/final_writeup/final.tex
@@ -60,25 +60,25 @@ However, one of the biggest challenges in training aspect-specific sentiment ana
 
 Within the context of a product review, the first component, \textit{aspect discovery}, involves identifying individual ``aspects" (which could be the product itself, or features/attributes of the product). This is made more difficult by the fact that relevant aspects might differ greatly across products in the same category. For example, aspects revelant to a cellular phone might be \textit{battery life}, \textit{screen size}, \textit{weight} and \textit{cost}. Not all these aspects are relevant across electronic items: for instance, \textit{screen size} might be irrelevant for a pair of headphones or a video game controller. We tackle this problem by generating new aspects from a list of seed words based on cosine similarities of the \texttt{word2vec} representations [1-2], and using the discovered aspects to train an aspect classifier.
 
-The second component, \textit{aspect-specific sentiment classification} involves identifying the sentiment associated with each aspect [3-8]---\textit{very positive, positive neutral, negative or very negative}. We approach this problem by first using a lexicon-based heuristic as a baseline and as a means of \textit{pre-labeling} the data. We then refined the labels and trained a convolutional neural network [12] to tackle the sentiment analysis problem as a sentence classification problem.
+The second component, \textit{aspect-specific sentiment classification} involves identifying the sentiment associated with each aspect [3-8]---\textit{very positive, positive neutral, negative or very negative}. We approach this problem by first using a lexicon-based heuristic as a baseline and as a means of \textit{pre-labeling} the data. We then refined the labels and trained a convolutional neural network [10] to tackle the sentiment analysis problem as a sentence classification problem.
 
 \section{Related work}
 
 
-\textbf{Aspect Discovery}: Previous methods have used graphical models to attempt to extract latent sentiment. [3-5] use Latent Dirichlet Allocation, while [6] uses a Conditional Random Field model to model latent aspects. In particular, most of these methods have a generative model where there is a latent aspect (drawn from a mix of ``global" and ``local" topics [3-4], or latent to each sentence [5]). 
+\textbf{Aspect Discovery}: Previous methods have used graphical models to attempt to extract latent sentiment. [3-5] use variants of Latent Dirichlet Allocation to model latent aspects. In particular, these methods have a generative model where there is a latent aspect drawn from a mix of ``global" and ``local" topics [3-4], latent to each sentence [5].
 
 % Add in "Simpler is better" paper
 
-[aspect parser paper]: rule-based approach to extracting aspects
+% [aspect parser paper]: rule-based approach to extracting aspects
 
-\textbf{Aspect-specific Sentiment Classification}: There has been recent work on using convolutional neural networks (CNN) trained on top of pre-trained word vectors for sentence-level classification tasks [12]. Specifically, [12] demonstrated the use of CNN to outperform state-of-the-art models on sentiment analysis classification tasks. Other deep learning approaches for aspect-based sentiment analysis use hierarchical models such as a Recursive Neural Tensor Network (RNTN) to extract aspect-sentiment tuples. Unfortunately, such supervised methods (e.g. [7-9]) that require labeled aspects-sentiment pairs for training are unscalable, and a better approach would be to automatically identify relevant aspects for each product (which, e.g. [3-5] try to do via topic modeling). 
+\textbf{Aspect-specific Sentiment Classification}: [3,5] add sentiment into their generative model of aspects and infer the sentiment using Gibbs sampling. [4,6] use heuristics to match the sentiment to aspects. Other deep learning approaches for aspect-based sentiment analysis use hierarchical models such as a Recursive Neural Tensor Network (RNTN) to extract aspect-sentiment tuples [7-9]. Unfortunately, such supervised methods that require labeled aspects-sentiment pairs for training are unscalable, and a better approach would be to automatically identify relevant aspects for each product (which, e.g. [3-5] try to do via topic modeling). More recently, there has been work on using convolutional neural networks (CNN) trained on top of pre-trained word vectors for sentence-level classification tasks [10]. Specifically, [10] demonstrated the use of CNN to outperform state-of-the-art models on sentiment analysis classification tasks.
 
 % TODO: Desmond to add more references?
 
 \section{Dataset}
-The dataset that we used consists of 7.6 million reviews (39.4M sentences) of electronic products from Amazon.com [10]. Each review is labeled with the document-level 5 star rating, which we did not end up using as it was too coarse. We focused our attention on the raw natural language text. We additionally supplemented our dataset with reviews for more recent products.
+The dataset that we used consists of 7.6 million reviews (39.4M sentences) of electronic products from Amazon.com [11]. Each review is labeled with the document-level 5 star rating, which we did not end up using as it was too coarse. We focused our attention on the raw natural language text. We additionally supplemented our dataset with reviews for more recent products.
 
-\textbf{Preprocessing.} We tokenized our corpus using NLTK's punkt tokenizer [11] for sentence splitting. We then removed all non-alphanumerical characters and replaced all digits with \texttt{DG}. Finally, we performed collocation detection to detect common bigrams.
+\textbf{Preprocessing.} We tokenized our corpus using NLTK's punkt tokenizer [12] for sentence splitting. We then removed all non-alphanumerical characters and replaced all digits with \texttt{DG}. Finally, we performed collocation detection to detect common bigrams.
 
 \section{Approach}
 
@@ -120,18 +120,18 @@ where $y \in \mathbb{R}^2$ is a one-hot label vector. When computing the loss fo
 The second half of our workflow involved sentiment analysis given identified aspects. Our intuition for this part stems from locality: if there are multiple sentiment and multiple aspect words within a sentence, then a good intuition would be that sentiment words closer to a particular aspect should be attributed to that aspect. Hence, models should be able to make use of local context to help in attributing sentiment.
 
 \textbf{Pre-labeling using Lexicon-based Heuristic}.
-Using the expanded list of aspects (from the aspect discovery process), we label them using a heuristic based on a sentiment lexicon by Hu and Liu [Bing]. We obtained phrases (i.e. training examples) consisting of an identified aspect in the middle, surrounded by a context window of $m$ words on both sides. We also padded these phrases with sentence start and end tags and zero-padded them to a fixed length. Next, we label all unigrams in these phrases with their unigram-specific sentiment according to the lexicon by [Bing] and average them to obtain the label for each phrase. Having pre-labeled out phrases according to this heuristic, we are now better able to refine the labels manually in less time (and hence less cost).
+Using the expanded list of aspects (from the aspect discovery process), we label them using a heuristic based on a sentiment lexicon by Hu and Liu [13]. We obtained phrases (i.e. training examples) consisting of an identified aspect in the middle, surrounded by a context window of $m$ words on both sides. We also padded these phrases with sentence start and end tags and zero-padded them to a fixed length. Next, we label all unigrams in these phrases with their unigram-specific sentiment according to the lexicon by [13] and average them to obtain the label for each phrase. Having pre-labeled out phrases according to this heuristic, we are now better able to refine the labels manually in less time (and hence less cost).
 
 
 \begin{figure}[ht]
 \begin{center}
 \includegraphics[width=\columnwidth]{model_architecture.png}
 \end{center}
-\caption{CNN Model Architecture as documented Kim [12]. The input is an $2m+1$ word context, where $m$ is the number of words on each side of the aspect, and the center word is an identified aspect. The input is convolved with different filter sizes with $w$ features and is then max-pooled.}
+\caption{CNN Model Architecture as documented Kim [10]. The input is an $2m+1$ word context, where $m$ is the number of words on each side of the aspect, and the center word is an identified aspect. The input is convolved with different filter sizes with $w$ features and is then max-pooled.}
 \label{architecture}
 \end{figure}
 
-\textbf{Sentiment Classification}. We decided upon a Convolutional Neural Network (CNN) Model based after Kim [12], who reported excellent results in sentence classification on many tasks including sentiment analysis. We model our architecture as per [12] and as reproduced in Figure \ref{architecture}. This model has one convolutional layer trained on top of pre-trained word vectors obtained from a \texttt{word2vec} model trained on our dataset. However, unlike [12], our CNN uses only a single non-static channel which allows the word vectors to be further finetuned.
+\textbf{Sentiment Classification}. We decided upon a Convolutional Neural Network (CNN) Model based after Kim [10], who reported excellent results in sentence classification on many tasks including sentiment analysis. We model our architecture as per [10] and as reproduced in Figure \ref{architecture}. This model has one convolutional layer trained on top of pre-trained word vectors obtained from a \texttt{word2vec} model trained on our dataset. However, unlike [10], our CNN uses only a single non-static channel which allows the word vectors to be further finetuned.
 
 Our input is represented as:
 \begin{align}
@@ -143,7 +143,7 @@ c_i = ReLU(\textbf{w} \cdot \textbf{x}_{i:i+h-1} + b)
 \end{align}
 This filter is applied across the input phrase to produce a feature map $\textbf{c} = [c_1, c_2, \ldots, c_{n-h+1}] \in \mathbb{R}^(n-h+1)$. We then apply a max-over-time pooling operation over each feature map and retain the maximum value $\hat{c} = max \{\textbf{c}\}$ for each filter.
 
-Lastly, we employ dropout [iii] in the fully connected layer and take the softmax output to obtain the predictions for all five sentiment classes.
+Lastly, we employ dropout [14] in the fully connected layer and take the softmax output to obtain the predictions for all five sentiment classes.
 
 
 \section{Experimental Results} 
@@ -264,10 +264,6 @@ We would like to acknowledge funding for computing resources provided by the Dee
 
 [2] Mikolov, T. \& Chen, K. \& Corrado, G. \& Dean, J. (2013). Distributed Representations of Words and Phrases and their Compositionality. In Proceedings of NIPS, 2013.
 
-[iii] Hinton, G., Srivastava, N., Krizhevsky, A., Sutskever, I., Salakhutdinov, R. (2012). Improving neural networks by preventing co-adaptation of feature detectors. CoRR, abs/1207.0580.
-
-[Bing]
-
 [3] Titov, I., \& McDonald, R. T. (2008). A Joint Model of Text and Aspect Ratings for Sentiment Summarization. In {\it ACL} (Vol. 8, pp. 308-316).
 
 [4] Brody, S., \& Elhadad, N. (2010). An unsupervised aspect-sentiment model for online reviews. In {\it Human Language Technologies: The 2010 Annual Conference of the North American Chapter of the Association for Computational Linguistics} (pp. 804-812). Association for Computational Linguistics.
@@ -285,19 +281,21 @@ We would like to acknowledge funding for computing resources provided by the Dee
 
 [9] Socher, R., Perelygin, A., Wu, J. Y., Chuang, J., Manning, C. D., Ng, A. Y., \& Potts, C. (2013). Recursive deep models for semantic compositionality over a sentiment treebank. In {\it Proceedings of the conference on Empirical Methods in Natural Language Processing (EMNLP)} (Vol. 1631, p. 1642).
 
+[10] Kim, Y. (2014). Convolutional neural networks for sentence classification. EMNLP.
 
-%[8] Ghose, A., \& Ipeirotis, P. G. (2007). Designing novel review ranking systems: predicting the usefulness and impact of reviews. In {\it Proceedings of the Ninth international conference on Electronic commerce} (pp. 303-310). ACM.
+[11] McAuley, J., Targett, C., Shi, J., \& van den Hengel, A. (2015). Image-based recommendations on styles and substitutes. {\it ACM Special Interest Group on Information Retrieval (SIGIR)}
 
-%[9] Chen, P. Y., Dhanasobhon, S., \& Smith, M. D. (2008). All reviews are not created equal: The disaggregate impact of reviews and reviewers at Amazon.com. Available at SSRN: http://ssrn.com/abstract=918083 
+[12] Bird, S, Loper, E. and Klein, E. (2009). Natural Language Processing with Python. O'Reilly Media Inc.
 
-%[10] Dai, W., Jin, G. Z., Lee, J., \& Luca, M. (2012). Optimal aggregation of consumer ratings: an application to Yelp.com (No. w18567). National Bureau of Economic Research. 
+[13] Hu, M., \& Liu, B. (2004). Mining and summarizing customer reviews. In Proceedings of the tenth ACM SIGKDD international conference on Knowledge discovery and data mining (pp. 168-177). ACM.
 
 
-[10] McAuley, J., Targett, C., Shi, J., \& van den Hengel, A. (2015). Image-based recommendations on styles and substitutes. {\it ACM Special Interest Group on Information Retrieval (SIGIR)}
+[14] Hinton, G., Srivastava, N., Krizhevsky, A., Sutskever, I., Salakhutdinov, R. (2012). Improving neural networks by preventing co-adaptation of feature detectors. CoRR, abs/1207.0580.
 
-[11] Bird, Steven, Loper, E. and Klein, E. (2009). Natural Language Processing with Python. O'Reilly Media Inc.
 
-[12] Kim, Y. (2014). Convolutional neural networks for sentence classification. EMNLP.
+
+
+
 
 %% this paper isn't that relevant. it's an evaluation system.
 %[2] Ward, C. B., Choi, Y., Skiena, S., \& Xavier, E. C. (2011). Empath: A framework for evaluating entity-level sentiment analysis. In {\it Emerging Technologies for a Smarter World (CEWIT), 2011 8th International Conference \& Expo}. (pp. 1-6). IEEE.
