--- a/final_writeup/final.tex
+++ b/final_writeup/final.tex
@@ -160,9 +160,9 @@ Lastly, we employ dropout [14] in the fully connected layer and take the softmax
 \label{aspectFig}
 \end{figure}
 
-We trained three different \texttt{word2vec} models. The most successful model was trained using the CBOW (continuous bag-of-words) model with a window size of 10 and feature dimension size of 300. We also ignored all words with total frequency count below 40 (this helped to remove many misspellings and typos). We determined the performance of each model by querying the model with various aspects common to electronic products (e.g. "portability", "screen quality", etc) and returning the top-$n$ closest attributes based on cosine similarity. We also found that training our own \texttt{word2vec} model is essential for good performance in this case as many of our vocabulary contain very niche words specific to electronic products (e.g. "gold\_plated", "atx\_motherboard", "sli").
+We trained three different \texttt{word2vec} models. The most successful model was trained using the CBOW (continuous bag-of-words) model with a window size of 10 and feature dimension size of 300. We also ignored all words with total frequency count below 40 (this helped to remove many misspellings and typos). We determined the performance of each model by querying the model with various aspects common to electronic products (e.g. ``portability", ``screen quality", etc) and returning the top-$n$ closest attributes based on cosine similarity. We also found that training our own \texttt{word2vec} model is essential for good performance in this case as many of our vocabulary contain very niche words specific to electronic products (e.g. ``gold\_plated", ``atx\_motherboard", ``sli").
 
-Figure \ref{aspectFig} illustrates the top-$n$ closest results for the seed words \texttt{portability}, \texttt{contrast}, and \texttt{tripod}. After qualitative evaluation, we found that $n=5$ is a good number that maintains the quality of aspects while allowing for good discovery.
+Figure \ref{aspectFig} illustrates the top-$n$ closest results for the seed words \texttt{portability}, \texttt{contrast}, and \texttt{tripod}. After qualitative evaluation, we found that an $n$ of 5 is a good number that maintains the quality of aspects while allowing for good discovery.
 
 As shown in Fig. \ref{aspectFig}, words like \texttt{portability} returned many synonyms as well as product aspects that are related to it (e.g. \texttt{ruggedness} and \texttt{simplicity}). Our model is also capable of returning aspects that are specific and unique to the product category it is trained on. In this case of electronic products, a query like \texttt{contrast} returned words like \texttt{shadow\_detail}, \texttt{dynamic\_range}, \texttt{black\_levels} and \texttt{gamma}, which are aspects specific to devices like monitor displays and cameras. Finally, the query \texttt{tripod} returned various aspects of camera tripods, many of them being features that are non-obvious to the layperson. For instance, \texttt{ball\_head} refers to a type of ball-shaped tripod head that allows free-pivoting along two rotational axes (as opposed to Cartesian axes), and \texttt{quick\_release} refers to tripod mounts that come with a quick-release plate. Many of these queries would otherwise perform poorly if performed on lexical databases like WordNet.
 
